<resources>
    <string name="app_name">MobileApp</string>
    <string name="onboarding_view_pager_text_1">Осень 2021 г., СПбГУ</string>
    <string name="onboarding_view_pager_text_2">Мы изучаем разработку под Android</string>
    <string name="onboarding_view_pager_text_3">Добро пожаловать в команду</string>
    <string name="onboarding_sign_in_button_text">Войти</string>
    <string name="onboarding_sign_up_button_text">Зарегистрироваться</string>
    <string name="bottom_navigation_title_news">Лента</string>
    <string name="bottom_navigation_title_users">Люди</string>
    <string name="bottom_navigation_title_likes">Лайки</string>
    <string name="bottom_navigation_title_bookmarks">Закладки</string>
    <string name="bottom_navigation_title_profile">Профиль</string>
    <string name="sign_in_sign_in_button_text">Войти</string>
    <string name="sign_in_email_text_layout_hint">Почта</string>
    <string name="sign_in_password_text_layout_hint">Пароль</string>
    <string name="sign_in_back_alert_dialog_text">Введенные данные пропадут. Продолжить?</string>
    <string name="sign_in_back_alert_dialog_cancel_button_text">Отменить</string>
    <string name="sign_in_back_alert_dialog_ok_button_text">Продолжить</string>
    <string name="sign_up_terms_and_conditions_template">Я принимаю %s</string>
    <string name="sign_up_club_rules">правила клуба</string>
    <string name="sign_up_firstname_text_layout_hint">Имя</string>
    <string name="sign_up_lastname_text_layout_hint">Фамилия</string>
    <string name="sign_up_nickname_text_layout_hint">Имя пользователя</string>
    <string name="sign_up_nickname_helper_text">Будет видно другим пользователям</string>
    <string name="sign_up_email_helper_text">Видно только Вам</string>
    <string name="sign_up_sign_up_button_text">Зарегистрироваться</string>
    <string name="sign_up_email_text_layout_hint">Почта</string>
    <string name="sign_up_password_text_layout_hint">Пароль</string>
    <string name="news_toolbar_title">Мобильная разработка</string>
    <string name="email_confirmation_sent">Код подтверждения был выслан Вам на почту</string>
    <string name="email_confirmation_verify">Подтвердить код</string>
    <string name="email_confirmation_to_email">Перейти в почту</string>
    <string name="common_general_error_text">Упс, что-то пошло не так :(</string>
    <string name="common_counter_prefix">+%d</string>
    <string name="userlist_try_again">Попробовать еще раз</string>
    <string name="userlist_empty">Пока нет добавленных пользователей</string>
    <string name="userlist_error_message">Ой, что-то пошло не так :(\nПроверьте подключение к сети и повторите еще раз</string>
    <string name="defaultUserImageUrl">https://s.yimg.com/ny/api/res/1.2/5rmN2CQI90DCby7uM2UefQ--/YXBwaWQ9aGlnaGxhbmRlcjt3PTEyMDA7aD04MDA-/https://s.yimg.com/uu/api/res/1.2/W1dJaYmRHV_PHKDIDmm__Q--~B/aD0xNDAwO3c9MjEwMDthcHBpZD15dGFjaHlvbg--/http://media.zenfs.com/en-US/homerun/time_72/ad41bb42a3e7be9eb1e32a9f2097b80f</string>
    <string name="email_confirmation_resend">Отправить код повторно</string>
    <string name="email_confirmation_timer">Новый код через: %d секунд</string>
</resources>