<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        style="@style/MyBackButton"
        android:id="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextCodeSent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_confirmation_sent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginTop="160dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"/>

    <com.example.mobileapp.ui.emailconfirmation.VerificationCodeEditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TextCodeSent"
        android:layout_marginTop="40dp"/>

    <Button
        style="@style/MyBrandOrangeButton"
        android:id="@+id/verifyButton"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/email_confirmation_verify"
        app:layout_constraintBottom_toTopOf="@+id/toEmailButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/MyBrandBlueButton"
        android:id="@+id/toEmailButton"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="48dp"
        android:text="@string/email_confirmation_to_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>